# source/storage/api-docs/api-docs.json
@@ -2,7 +2,7 @@
     "openapi": "3.0.0",
     "info": {
         "title": "Lendflow Assessment API",
-        "description": "API documentation for Lendflow Assessment",
+        "description": "This is the API documentation for the New York Times Best Sellers wrapper.\n## Versioning and Support Strategy\n- **v1**: Current stable version. Fully supported until March 2, 2026. This version provides access to the NYT Best Sellers history and is guaranteed to remain unchanged until the support period ends.\n- **v2**: Planned release in June 2025. This version may introduce new features and breaking changes. Users are encouraged to migrate to v2 within 6 months of its release to ensure continued support and access to the latest enhancements.\n- **Breaking Changes**: Significant updates that affect compatibility will only be introduced in new major versions (e.g., v2, v3). Deprecated endpoints or parameters will be marked as such and supported for at least 6 months after a new version is released, giving users time to transition.\n- **Support Policy**: Each major version is supported for a minimum of 1 year after the release of the subsequent version. Critical security fixes may be provided beyond this period if necessary.\n- **Notifications**: Users will be informed of upcoming changes or deprecations via HTTP headers (e.g., 'Warning') and updates to this documentation.\n\nFor detailed change logs, refer to the [CHANGELOG.md](https://github.com/Lapinskas/test-laravel/blob/main/CHANGELOG.md) file in the repository.",
         "contact": {
             "email": "vlad.lapinskas@gmail.com"
         },
@@ -17,7 +17,7 @@
         "/best-sellers": {
             "post": {
                 "tags": [
-                    "Best Sellers"
+                    "Experimental"
                 ],
                 "summary": "Get list of best sellers",
                 "description": "This endpoint a wrapper over NYT API",
@@ -161,8 +161,8 @@
     },
     "tags": [
         {
-            "name": "Best Sellers",
-            "description": "Best Sellers"
+            "name": "Experimental",
+            "description": "Experimental"
         }
     ]
 }
